--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,22 @@
-body {
-  background-color: black;
-  color: white;
+*, *:before, *:after {
+
+  -webkit-box-sizing: border-box !important;
+  -moz-box-sizing: border-box !important;
+  -ms-box-sizing: border-box !important;
+  box-sizing: border-box !important;
 }
 
-body > *{
-  margin: 50px;
+html, body {
+  background-color: black;
+  color: white;
+  margin: 0;
+  padding: 20px;
 }
 
 .logo {
   display: flex;
   justify-content: center;
+  padding: 40px 0;
 }
 
 .logo img {
