--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,12 @@
-
+main {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 40px;
+}
 
 #loading-screen {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: #f2f2f2;
-  z-index: 9999;
-  display: flex; 
-  justify-content: center;
-  align-items: center;
-  margin: 0;
+  width: 40px;
+  height: 40px;
 }
 
 #loading-screen::after {
