--- a/src/index.css
+++ b/src/index.css
@@ -7,10 +7,8 @@
 }
 
 html, body {
-  background-color: black;
-  color: white;
   margin: 0;
-  padding: 20px;
+  background-color: #DDD;
 }
 
 .logo {
