--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,26 @@
 main {
-  padding: 80px 40px 20px;
+  padding: 100px 0 20px;
   background-color: white;
+}
+
+.tone { 
+  background-color: lightgray;
+  border-radius: 20px;
+  margin: 0 20px 20px;
+  padding: 20px;
+}
+
+.tone h3 {
+  margin: 0;
+  font-size: 20px;
+}
+
+.tone p {
+  font-size: 16px;
+}
+
+.tone div {
+  padding: 20px;
 }
 
 .articles {
